# cpp20_module_learning

./: .gitignore  CMakeLists.txt  main.cpp  module1.cppm  module2.cppm  submodule1.cppm  submodule2_impl.cppm  submodule2_interface.cppm
